[metadata]
name = lm4bld
version = 0.0.1
author = Shane McIntosh
author_email = shane.mcintosh@uwaterloo.ca
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/software-rebels/lm4bld
project_urls =
    Bug Tracker = https://github.com/software-rebels/lm4bld/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	PyYAML
	nltk
	pyyaml
	tensorflow-cpu==2.10
	tensorflow-directml-plugin

[options.packages.find]
where = src
